# gemini_stock_analysis

./: .gitignore  README.md  SETUP.md  check_python.py  example.py  gemini_model_config.json  pyproject.toml  pyrightconfig.json
gemini_stock_analysis/: __init__.py  chat_client.py  config.py  load_data.py  main.py
gemini_stock_analysis/gemini/: __init__.py  client.py
gemini_stock_analysis/mcp/: __init__.py  handler.py  server.py
gemini_stock_analysis/sheets/: __init__.py  reader.py
gemini_stock_analysis/vector_db/: __init__.py  gemini_embedding_function.py  store.py
src/gemini_stock_analysis/: main.py
src/gemini_stock_analysis/vector_db/: __init__.py
